# Bazel-iOS-Workshop

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel  setup.sh
Bazel-iOS-Workshop/: AppDelegate.swift  BUILD.bazel  Info.plist  SceneDelegate.swift  ViewController.swift
Bazel-iOS-Workshop.xcodeproj/: project.pbxproj
Bazel-iOS-Workshop.xcodeproj/xcshareddata/xcschemes/: Bazel-iOS-Workshop.xcscheme
Bazel-iOS-Workshop/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
Bazel-iOS-WorkshopTests/: BUILD.bazel  Bazel_iOS_WorkshopTests.swift
Bazel-iOS-WorkshopUITests/: BUILD.bazel  Bazel_iOS_WorkshopUITests.swift  Bazel_iOS_WorkshopUITestsLaunchTests.swift
SharedFramework/: BUILD.bazel  Info.plist  LegacyClass.h  LegacyClass.m  SharedFramework.h  SharedFramework.swift
SharedFrameworkTests/: BUILD.bazel  SharedFrameworkTests.swift
SharedLibrary/: BUILD.bazel  SharedLibrary.swift
tools/: bazel
warmup/: BUILD.bazel  exit_0_test.sh  exit_1_test.sh
