load("@build_bazel_rules_apple//apple:ios.bzl", "ios_ui_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

# swift_library (https://github.com/bazelbuild/rules_swift/blob/master/doc/rules.md#swift_library) named SwiftLibrary
swift_library(
    name = "SwiftLibrary",
    srcs = glob([
        "*.swift",
    ]),
    tags = ["manual"],
    deps = [],
)

# ios_ui_test (https://github.com/bazelbuild/rules_apple/blob/master/doc/rules-ios.md#ios_ui_test) named Bazel-iOS-WorkshopUITests
ios_ui_test(
    name = "Bazel-iOS-WorkshopUITests",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "15.0",
    test_host = "//Bazel-iOS-Workshop:App",
    deps = [":SwiftLibrary"],
)
